edición de lista de productos

--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -74,10 +74,10 @@
 
             <div class="lista">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/Avengers_Vol_1_1.webp" class="card-img-top"
+                        alt="avengers portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">Avengers #1</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -105,9 +105,9 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/god-of-war-ragnarok-20221131016774_1.jpg" class="card-img-top" alt="...">
+                    <img src="../img/91U157yeMWL.jpg" class="card-img-top" alt="justice league portada">
                     <div class="card-body">
-                        <h5 class="card-title">God of War Ragnarok</h5>
+                        <h5 class="card-title">The New 52 Justice League #1</h5>
                         <p class="card-text text-truncate">
                             Desde Santa Monica Studio llega la secuela del aclamado por la crítica God of War (2018).
                             Fimbulvetr ya está en camino. Kratos y Atreus deben viajar a cada uno de los nueve reinos en
@@ -124,10 +124,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/clean.jpg" class="card-img-top"
+                        alt="spiderman portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">The Amazing Spider-Man #1</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -155,10 +155,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/TMNT_001_29.webp" class="card-img-top"
+                        alt="TMNT portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">TMNT #1</h5>
                         <p class="card-text text-truncate" style="max-width: 300px;" >
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -186,10 +186,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/batman_broma_asesina_deluxe_pvc.jpg" class="card-img-top"
+                        alt="batman portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">Batman The Killing Joke</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
