--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -75,10 +75,10 @@
 
             <div class="lista">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/eldenring11-5c93145ed747e47dfe16451397874446-640-0.webp" class="card-img-top"
+                        alt="elden ring portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">Elden Ring</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/god-of-war-ragnarok-20221131016774_1.jpg" class="card-img-top" alt="...">
+                    <img src="../img/Portada_God_of_War_Ragnarok.webp" class="card-img-top" alt="god of war portada">
                     <div class="card-body">
                         <h5 class="card-title">God of War Ragnarok</h5>
                         <p class="card-text text-truncate">
@@ -125,10 +125,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/horizon-forbidden-west-ps41-f7a81ec08dff386fe216451392749344-640-0.webp" class="card-img-top"
+                        alt="horizon portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">Horizon Forbidden West</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -156,10 +156,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/the-last-of-us-parte-i-202261012304123_1.jpg" class="card-img-top"
+                        alt="the last of us portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">The Last of Us Parte 1</h5>
                         <p class="card-text text-truncate" style="max-width: 300px;" >
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -187,10 +187,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/D_NQ_NP_939213-MLA53178668757_012023-O.jpg" class="card-img-top"
+                        alt="fifa 23 portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">FIFA 23</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
