--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
             <h2>Recomendados</h2>
             <div class="lista">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="./img/the-last-of-us-parte-i-202261012304123_1.jpg" class="card-img-top"
+                        alt="the last of us portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
-                        <p class="card-text text-truncate">
+                        <h5 class="card-title">The Last of Us Parte 1</h5>
+                        <p class="card-text text-truncate" style="max-width: 300px;" >
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
                             una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
@@ -152,9 +152,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/god-of-war-ragnarok-20221131016774_1.jpg" class="card-img-top" alt="...">
+                    <img src="./img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" class="card-img-top"
+                        alt="bleach portada">
                     <div class="card-body">
-                        <h5 class="card-title">God of War Ragnarok</h5>
+                        <h5 class="card-title">Bleach Remix #1</h5>
                         <p class="card-text text-truncate">
                             Desde Santa Monica Studio llega la secuela del aclamado por la crítica God of War (2018).
                             Fimbulvetr ya está en camino. Kratos y Atreus deben viajar a cada uno de los nueve reinos en
@@ -171,10 +172,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="./img/batman_broma_asesina_deluxe_pvc.jpg" class="card-img-top"
+                        alt="batman portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">Batman The Killing Joke</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -202,11 +203,11 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="./img/D_NQ_NP_939213-MLA53178668757_012023-O.jpg" class="card-img-top"
+                        alt="fifa 23 portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
-                        <p class="card-text text-truncate" style="max-width: 300px;" >
+                        <h5 class="card-title">FIFA 23</h5>
+                        <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
                             una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
