--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -78,7 +78,7 @@
                     <img src="../img/sp_n1McLdPFBg.png" class="card-img-top"
                         alt="magic the gathering portada">
                     <div class="card-body">
-                        <h5 class="card-title">Magic the Gathering</h5>
+                        <h5 class="card-title">Magic the Gathering Adventures on Forgotten Realms</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
@@ -106,9 +106,9 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/god-of-war-ragnarok-20221131016774_1.jpg" class="card-img-top" alt="...">
+                    <img src="../img/ETCO_display_EN-600x600.jpg" class="card-img-top" alt="yugioh portada">
                     <div class="card-body">
-                        <h5 class="card-title">God of War Ragnarok</h5>
+                        <h5 class="card-title">YUGIOH Eternity Code</h5>
                         <p class="card-text text-truncate">
                             Desde Santa Monica Studio llega la secuela del aclamado por la crítica God of War (2018).
                             Fimbulvetr ya está en camino. Kratos y Atreus deben viajar a cada uno de los nueve reinos en
@@ -125,10 +125,10 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                    <img src="../img/PKM_SWSH09-Booster-Display_EN-600-600x600.jpg" class="card-img-top"
+                        alt="pokemon portada">
                     <div class="card-body">
-                        <h5 class="card-title">Death Note #10</h5>
+                        <h5 class="card-title">Pokemon Card Game</h5>
                         <p class="card-text text-truncate">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
