Adición de boton para leer textos

--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -79,7 +79,13 @@
                         alt="magic the gathering portada">
                     <div class="card-body">
                         <h5 class="card-title">Magic the Gathering Adventures on Forgotten Realms</h5>
-                        <p class="card-text text-truncate">
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                        aria-expanded="false" aria-controls="collapseExample">
+                        Leer info.
+                    </a>
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        <p class="card-text" style="max-width: 300px;">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
                             una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
@@ -99,6 +105,8 @@
                             2006,
                             totalizando 12 tomos.
                         </p>
+                    </div>
+                </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -109,15 +117,34 @@
                     <img src="../img/ETCO_display_EN-600x600.jpg" class="card-img-top" alt="yugioh portada">
                     <div class="card-body">
                         <h5 class="card-title">YUGIOH Eternity Code</h5>
-                        <p class="card-text text-truncate">
-                            Desde Santa Monica Studio llega la secuela del aclamado por la crítica God of War (2018).
-                            Fimbulvetr ya está en camino. Kratos y Atreus deben viajar a cada uno de los nueve reinos en
-                            búsqueda de respuestas, mientras que las fuerzas asgardianas se preparan para una batalla
-                            profetizada que terminará con el mundo. En el camino explorarán paisajes increíbles y
-                            míticos, y se enfrentarán a aterradores enemigos en la forma de dioses nórdicos y monstruos.
-                            La amenaza del Ragnarök cada vez está más cerca. Kratos y Atreus deben elegir entre su
-                            propia seguridad y la seguridad de los reinos
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button"
+                        aria-expanded="false" aria-controls="collapseExample">
+                        Leer info.
+                    </a>
+                <div class="collapse" id="collapseExample1">
+                    <div class="card card-body">
+                        <p class="card-text" style="max-width: 300px;">
+                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
+                            lleva
+                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
+                            Todo
+                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                            confiere
+                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
+                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
+                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
+                            que
+                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
+                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
+                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
+                            descubrir su
+                            verdadera identidad.
+                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
+                            2006,
+                            totalizando 12 tomos.
                         </p>
+                    </div>
+                </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -129,7 +156,13 @@
                         alt="pokemon portada">
                     <div class="card-body">
                         <h5 class="card-title">Pokemon Card Game</h5>
-                        <p class="card-text text-truncate">
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button"
+                        aria-expanded="false" aria-controls="collapseExample">
+                        Leer info.
+                    </a>
+                <div class="collapse" id="collapseExample2">
+                    <div class="card card-body">
+                        <p class="card-text" style="max-width: 300px;">
                             La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
                             lleva
                             una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
@@ -149,6 +182,8 @@
                             2006,
                             totalizando 12 tomos.
                         </p>
+                    </div>
+                </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
