Cambio de texto

--- a/index.html
+++ b/index.html
@@ -125,31 +125,16 @@
                         alt="the last of us portada">
                     <div class="card-body">
                         <h5 class="card-title">The Last of Us Parte 1</h5>
-                            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
-                                aria-expanded="false" aria-controls="collapseExample">
-                                Leer info.
-                            </a>
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
                         <div class="collapse" id="collapseExample">
                             <div class="card card-body">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Remake del aclamado juego de Naughty Dog, el cual narra el viaje de Joel y Ellie por
+                                    todo Estados Unidos con la esperanza de lograr conseguir una cura para la epidemia
+                                    que arrasó su mundo y convirtió a las personas en zombies.
                                 </p>
                             </div>
                         </div>
@@ -165,33 +150,18 @@
                     <div class="card-body">
                         <h5 class="card-title">Bleach Remix #1</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample1">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample1">
+                            <div class="card card-body">
+                                <p class="card-text" style="max-width: 300px;">
+                                    Tomo recopilatorio que junta los tomos 1-3 de la aclamada obra BLEACH, la cual
+                                    cuenta la historia de Ichigo Kurosaki y su travesía para volverse más fuerte y
+                                    proteger a sus amigos.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -203,33 +173,19 @@
                     <div class="card-body">
                         <h5 class="card-title">Batman The Killing Joke</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample2">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample2">
+                            <div class="card card-body">
+                                <p class="card-text" style="max-width: 300px;">
+                                    Por primera vez, el origen del Joker es revelado en esta historia de locura y
+                                    perseverancia humana. Buscando probar que cualquier hombre puede ser empujado mas
+                                    allá de sus límites y volverse loco, Joker intenta volver loco al Comisionado
+                                    Gordon.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -242,33 +198,18 @@
                     <div class="card-body">
                         <h5 class="card-title">FIFA 23</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample3" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample3">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample3">
+                            <div class="card card-body">
+                                <p class="card-text" style="max-width: 300px;">
+                                    EA SPORTS™ trae la nueva entrega de El Juego de Todos al campo con los
+                                    torneos de la Copa Mundial de la FIFA™ masculina y femenina, la incorporación de
+                                    clubes femeninos y nuevas formas de jugar tus modos favoritos.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -277,37 +218,29 @@
 
                 <div class="card text-center" style="width: 18rem;">
                     <img src="./img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
-                        alt="...">
+                        alt="death note portada">
                     <div class="card-body">
                         <h5 class="card-title">Death Note #10</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample4" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample4">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample4">
+                            <div class="card card-body">
+                                <p class="card-text" style="max-width: 300px;">
+                                    La historia se centra en Light Yagami, cuya aburrida vida
+                                    cambia radicalmente cuando se topa con un cuaderno que
+                                    confiere
+                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona, esta
+                                    morirá en la forma deseada. Light decide utilizarlo para matar a todo aquel
+                                    que está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirá el
+                                    origen del
+                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
+                                    acciones
+                                    desencadenarán.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
