--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -74,7 +74,6 @@
                 <p>MANGAS</p>
             </section>
 
-
             <div class="lista">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="../img/deathnote101-280220835f32701d3d16336517203911-640-0.jpg" class="card-img-top"
@@ -88,32 +87,16 @@
                         <div class="collapse" id="collapseExample">
                             <div class="card card-body">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                                    La historia se centra en Light Yagami, cuya aburrida vida
+                                    cambia radicalmente cuando se topa con un cuaderno que
                                     confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
+                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona, esta
+                                    morirá en la forma deseada. Light decide utilizarlo para matar a todo aquel
+                                    que está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirá el
                                     origen del
                                     cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
                                     acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    desencadenarán.
                                 </p>
                             </div>
                         </div>
@@ -135,32 +118,9 @@
                         <div class="collapse" id="collapseExample1">
                             <div class="card card-body">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Tomo recopilatorio que junta los tomos 1-3 de la aclamada obra BLEACH, la cual
+                                    cuenta la historia de Ichigo Kurosaki y su travesía para volverse más fuerte y
+                                    proteger a sus amigos.
                                 </p>
                             </div>
                         </div>
