--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -261,8 +261,7 @@
                 </div>
 
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="../img/batman_broma_asesina_deluxe_pvc.jpg" class="card-img-top"
-                        alt="batman portada">
+                    <img src="../img/batman_broma_asesina_deluxe_pvc.jpg" class="card-img-top" alt="batman portada">
                     <div class="card-body">
                         <h5 class="card-title">Batman The Killing Joke</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample4" role="button"
@@ -272,32 +271,10 @@
                         <div class="collapse" id="collapseExample4">
                             <div class="card card-body">
                                 <p class="card-text" style="max-width: 300px;">
-                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
-                                    que
-                                    lleva
-                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
-                                    podrido.
-                                    Todo
-                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                                    confiere
-                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
-                                    visualiza
-                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
-                                    no se
-                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
-                                    todo aquel
-                                    que
-                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
-                                    origen del
-                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
-                                    acciones
-                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                                    descubrir su
-                                    verdadera identidad.
-                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
-                                    2003 y
-                                    2006,
-                                    totalizando 12 tomos.
+                                    Por primera vez, el origen del Joker es revelado en esta historia de locura y
+                                    perseverancia humana. Buscando probar que cualquier hombre puede ser empujado mas
+                                    allá de sus límites y volverse loco, Joker intenta volver loco al Comisionado
+                                    Gordon.
                                 </p>
                             </div>
                         </div>
