--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -196,33 +196,18 @@
                     <div class="card-body">
                         <h5 class="card-title">The Last of Us Parte 1</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample3" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample3">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample3">
+                            <div class="card card-body">
+                                <p class="card-text" style="max-width: 300px;">
+                                    Remake del aclamado juego de Naughty Dog, el cual narra el viaje de Joel y Ellie por
+                                    todo Estados Unidos con la esperanza de lograr conseguir una cura para la epidemia
+                                    que arrasó su mundo y convirtió a las personas en zombies.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -235,33 +220,18 @@
                     <div class="card-body">
                         <h5 class="card-title">FIFA 23</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample4" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample4">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample4">
+                            <div class="card card-body">
+                                <p class="card-text" style="max-width: 300px;">
+                                    EA SPORTS™ trae la nueva entrega de El Juego de Todos al campo con los
+                                    torneos de la Copa Mundial de la FIFA™ masculina y femenina, la incorporación de
+                                    clubes femeninos y nuevas formas de jugar tus modos favoritos.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
